[tool.poetry]
name = "pyzaim"
version = "1.0.11"
description = "Zaimのデータを取得・操作するPythonパッケージ"
authors = ["liebe-magi <liebe.magi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/liebe-magi/pyzaim"
keywords = ["zaim", "oauth", "rest api", "selenium", "chromedriver"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7"
]


[tool.poetry.dependencies]
python = "^3.7"
requests-oauthlib = "^2.0.0"
selenium = "^3.141.0"
tqdm = "^4.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
